Update directory tree visualization to use the minimal amount of offset spacing.

--- a/nbs/02_tree.ipynb
+++ b/nbs/02_tree.ipynb
@@ -60,6 +60,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "988574c7-6a80-4b8a-8703-d42861e54b61",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "ALIGNMENT_BUFFER = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "0738c4e1-b427-429b-93ec-67aa63de7e98",
    "metadata": {},
    "outputs": [],
@@ -343,6 +354,11 @@
     "        if exclude_index:\n",
     "            notebooks = [nb for nb in notebooks if nb.name not in ['index.ipynb', '00_index.ipynb']]\n",
     "        \n",
+    "        # First pass: collect all lines to calculate the maximum length\n",
+    "        temp_lines = []\n",
+    "        descriptions = []\n",
+    "        max_length = 0\n",
+    "        \n",
     "        for i, nb_path in enumerate(notebooks):\n",
     "            is_last = (i == len(notebooks) - 1)\n",
     "            connector = \"└── \" if is_last else \"├── \"\n",
@@ -350,13 +366,30 @@
     "            # Extract notebook info\n",
     "            nb_info = extract_notebook_info(nb_path)\n",
     "            \n",
-    "            # Format line with description\n",
+    "            # Create the base line without description\n",
+    "            base_line = f\"{connector}{nb_path.name}\"\n",
+    "            temp_lines.append(base_line)\n",
+    "            \n",
+    "            # Track max length for alignment\n",
+    "            max_length = max(max_length, len(base_line))\n",
+    "            \n",
+    "            # Store description for later use\n",
     "            if nb_info.description:\n",
     "                # Strip Markdown links from description\n",
     "                clean_description = strip_markdown_links(nb_info.description)\n",
-    "                line = f\"{connector}{nb_path.name}\".ljust(28) + f\" # {clean_description}\"\n",
+    "                descriptions.append(clean_description)\n",
     "            else:\n",
-    "                line = f\"{connector}{nb_path.name}\"\n",
+    "                descriptions.append(None)\n",
+    "        \n",
+    "        # Second pass: create properly aligned lines\n",
+    "        # Add a small buffer between the longest filename and comments\n",
+    "        alignment_offset = max_length + ALIGNMENT_BUFFER\n",
+    "        \n",
+    "        for base_line, description in zip(temp_lines, descriptions):\n",
+    "            if description:\n",
+    "                line = base_line.ljust(alignment_offset) + f\"# {description}\"\n",
+    "            else:\n",
+    "                line = base_line\n",
     "            \n",
     "            lines.append(line)\n",
     "    else:\n",
@@ -397,8 +430,9 @@
     "    if exclude_index:\n",
     "        notebooks = [nb for nb in notebooks if nb.name not in ['index.ipynb', '00_index.ipynb']]\n",
     "    \n",
-    "    # Combine and sort all items\n",
+    "    # First pass: collect all items and calculate max length\n",
     "    all_items = []\n",
+    "    max_length = 0\n",
     "    \n",
     "    # Add subdirectories\n",
     "    for subdir in subdirs:\n",
@@ -424,6 +458,18 @@
     "        else:\n",
     "            all_items.append((nb_path, 'file', \"\"))\n",
     "    \n",
+    "    # Calculate max length for notebook files (for alignment)\n",
+    "    for i, (item, item_type, annotation) in enumerate(all_items):\n",
+    "        is_last = (i == len(all_items) - 1)\n",
+    "        connector = \"└── \" if is_last else \"├── \"\n",
+    "        \n",
+    "        if item_type == 'file':\n",
+    "            base_line = f\"{prefix}{connector}{item.name}\"\n",
+    "            max_length = max(max_length, len(base_line))\n",
+    "    \n",
+    "    # Add a small buffer for alignment if we have any notebooks\n",
+    "    alignment_offset = max_length + ALIGNMENT_BUFFER if max_length > 0 else 0\n",
+    "    \n",
     "    # Generate lines for each item\n",
     "    for i, (item, item_type, annotation) in enumerate(all_items):\n",
     "        is_last = (i == len(all_items) - 1)\n",
@@ -446,9 +492,9 @@
     "        else:\n",
     "            # Notebook file\n",
     "            nb_line = f\"{prefix}{connector}{item.name}\"\n",
-    "            if annotation:\n",
+    "            if annotation and alignment_offset > 0:\n",
     "                # Pad the filename to align descriptions\n",
-    "                nb_line = nb_line.ljust(len(prefix) + 28) + f\" {annotation}\"\n",
+    "                nb_line = nb_line.ljust(alignment_offset) + f\" {annotation}\"\n",
     "            lines.append(nb_line)\n",
     "    \n",
     "    return lines"
@@ -527,13 +573,13 @@
      "output_type": "stream",
      "text": [
       "nbs/\n",
-      "├── 00_core.ipynb            # Core utilities and data models for nbdev project overview generation\n",
-      "├── 01_parsers.ipynb         # Parse notebook metadata, content, and extract function/class signatures with docments\n",
-      "├── 02_tree.ipynb            # Generate tree visualizations for nbdev project structure\n",
-      "├── 03_api_docs.ipynb        # Generate module overviews with formatted signatures for nbdev projects\n",
-      "├── 04_dependencies.ipynb    # Analyze cross-notebook imports and generate Mermaid.js dependency diagrams\n",
-      "├── 05_generators.ipynb      # Auto-generate folder_name.ipynb notebooks for nbdev project organization\n",
-      "└── 06_cli.ipynb             # CLI commands for nbdev project overview generation and analysis\n"
+      "├── 00_core.ipynb         # Core utilities and data models for nbdev project overview generation\n",
+      "├── 01_parsers.ipynb      # Parse notebook metadata, content, and extract function/class signatures with docments\n",
+      "├── 02_tree.ipynb         # Generate tree visualizations for nbdev project structure\n",
+      "├── 03_api_docs.ipynb     # Generate module overviews with formatted signatures for nbdev projects\n",
+      "├── 04_dependencies.ipynb # Analyze cross-notebook imports and generate Mermaid.js dependency diagrams\n",
+      "├── 05_generators.ipynb   # Auto-generate folder_name.ipynb notebooks for nbdev project organization\n",
+      "└── 06_cli.ipynb          # CLI commands for nbdev project overview generation and analysis\n"
      ]
     }
    ],
@@ -582,11 +628,23 @@
     "    # Sort by name\n",
     "    items.sort(key=lambda x: x[0].name.lower())\n",
     "    \n",
+    "    # Calculate max length for alignment if showing descriptions\n",
+    "    max_length = 0\n",
+    "    if show_descriptions:\n",
+    "        for i, (item, is_dir) in enumerate(items):\n",
+    "            if not is_dir:  # Only calculate for notebooks\n",
+    "                is_last = (i == len(items) - 1)\n",
+    "                connector = \"└── \" if is_last else \"├── \"\n",
+    "                base_line = f\"{connector}{item.name}\"\n",
+    "                max_length = max(max_length, len(base_line))\n",
+    "        # Add buffer\n",
+    "        max_length += 4 if max_length > 0 else 0\n",
+    "    \n",
     "    # Generate tree lines\n",
     "    for i, (item, is_dir) in enumerate(items):\n",
     "        is_last = (i == len(items) - 1)\n",
     "        lines.extend(_generate_subdirectory_lines(\n",
-    "            item, \"\", is_last, is_dir, show_descriptions, 0\n",
+    "            item, \"\", is_last, is_dir, show_descriptions, 0, max_length\n",
     "        ))\n",
     "    \n",
     "    return '\\n'.join(lines)"
@@ -605,7 +663,8 @@
     "                                is_last: bool,                  # Is last item\n",
     "                                is_dir: bool,                   # Is directory\n",
     "                                show_descriptions: bool,        # Show descriptions\n",
-    "                                depth: int                      # Current depth\n",
+    "                                depth: int,                     # Current depth\n",
+    "                                max_length: int = 0             # Max length for alignment (calculated externally)\n",
     "                                ) -> List[str]:                 # Tree lines\n",
     "    \"Generate tree lines for subdirectory visualization\"\n",
     "    lines = []\n",
@@ -634,25 +693,38 @@
     "        # Sort by name\n",
     "        sub_items.sort(key=lambda x: x[0].name.lower())\n",
     "        \n",
+    "        # Calculate max length for this subdirectory if not provided\n",
+    "        local_max_length = max_length\n",
+    "        if local_max_length == 0 and show_descriptions:\n",
+    "            for sub_item, sub_is_dir in sub_items:\n",
+    "                if not sub_is_dir:  # Only calculate for notebooks\n",
+    "                    sub_connector = \"└── \" if sub_item == sub_items[-1][0] else \"├── \"\n",
+    "                    base_line = f\"{prefix}{extension}{sub_connector}{sub_item.name}\"\n",
+    "                    local_max_length = max(local_max_length, len(base_line))\n",
+    "            # Add buffer\n",
+    "            local_max_length += 4 if local_max_length > 0 else 0\n",
+    "        \n",
     "        # Generate lines for sub-items\n",
     "        for j, (sub_item, sub_is_dir) in enumerate(sub_items):\n",
     "            sub_is_last = (j == len(sub_items) - 1)\n",
     "            lines.extend(_generate_subdirectory_lines(\n",
     "                sub_item, prefix + extension, sub_is_last, \n",
-    "                sub_is_dir, show_descriptions, depth + 1\n",
+    "                sub_is_dir, show_descriptions, depth + 1, local_max_length\n",
     "            ))\n",
     "    else:\n",
     "        # Notebook entry\n",
+    "        base_line = f\"{prefix}{connector}{item.name}\"\n",
+    "        \n",
     "        if show_descriptions:\n",
     "            nb_info = extract_notebook_info(item)\n",
-    "            if nb_info.description:\n",
+    "            if nb_info.description and max_length > 0:\n",
     "                # Strip Markdown links from description\n",
     "                clean_description = strip_markdown_links(nb_info.description)\n",
-    "                line = f\"{prefix}{connector}{item.name}\".ljust(40) + f\" # {clean_description}\"\n",
+    "                line = base_line.ljust(max_length) + f\"# {clean_description}\"\n",
     "            else:\n",
-    "                line = f\"{prefix}{connector}{item.name}\"\n",
+    "                line = base_line\n",
     "        else:\n",
-    "            line = f\"{prefix}{connector}{item.name}\"\n",
+    "            line = base_line\n",
     "        \n",
     "        lines.append(line)\n",
     "    \n",
