--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -41,13 +41,13 @@
     "\n",
     "```\n",
     "nbs/\n",
-    "├── 00_core.ipynb            # Core utilities and data models for nbdev project overview generation\n",
-    "├── 01_parsers.ipynb         # Parse notebook metadata, content, and extract function/class signatures with docments\n",
-    "├── 02_tree.ipynb            # Generate tree visualizations for nbdev project structure\n",
-    "├── 03_api_docs.ipynb        # Generate module overviews with formatted signatures for nbdev projects\n",
-    "├── 04_dependencies.ipynb    # Analyze cross-notebook imports and generate Mermaid.js dependency diagrams\n",
-    "├── 05_generators.ipynb      # Auto-generate folder_name.ipynb notebooks for nbdev project organization\n",
-    "└── 06_cli.ipynb             # CLI commands for nbdev project overview generation and analysis\n",
+    "├── 00_core.ipynb         # Core utilities and data models for nbdev project overview generation\n",
+    "├── 01_parsers.ipynb      # Parse notebook metadata, content, and extract function/class signatures with docments\n",
+    "├── 02_tree.ipynb         # Generate tree visualizations for nbdev project structure\n",
+    "├── 03_api_docs.ipynb     # Generate module overviews with formatted signatures for nbdev projects\n",
+    "├── 04_dependencies.ipynb # Analyze cross-notebook imports and generate Mermaid.js dependency diagrams\n",
+    "├── 05_generators.ipynb   # Auto-generate folder_name.ipynb notebooks for nbdev project organization\n",
+    "└── 06_cli.ipynb          # CLI commands for nbdev project overview generation and analysis\n",
     "```\n",
     "\n",
     "Total: 8 notebooks"
@@ -72,19 +72,19 @@
     "    parsers --> tree\n",
     "    parsers --> core\n",
     "    tree --> core\n",
-    "    api_docs --> parsers\n",
-    "    api_docs --> dependencies\n",
     "    api_docs --> tree\n",
+    "    api_docs --> parsers\n",
     "    api_docs --> core\n",
+    "    api_docs --> dependencies\n",
     "    dependencies --> dependencies\n",
     "    dependencies --> parsers\n",
     "    dependencies --> core\n",
-    "    generators --> tree\n",
     "    generators --> core\n",
-    "    cli --> dependencies\n",
-    "    cli --> parsers\n",
+    "    generators --> tree\n",
     "    cli --> tree\n",
+    "    cli --> parsers\n",
     "    cli --> api_docs\n",
+    "    cli --> dependencies\n",
     "```\n",
     "\n",
     "*16 cross-module dependencies detected*"
@@ -441,7 +441,8 @@
     "                                is_last: bool,                  # Is last item\n",
     "                                is_dir: bool,                   # Is directory\n",
     "                                show_descriptions: bool,        # Show descriptions\n",
-    "                                depth: int                      # Current depth\n",
+    "                                depth: int,                     # Current depth\n",
+    "                                max_length: int = 0             # Max length for alignment (calculated externally)\n",
     "                                ) -> List[str]:                 # Tree lines\n",
     "    \"Generate tree lines for subdirectory visualization\"\n",
     "```\n",
@@ -450,7 +451,13 @@
     "def get_tree_summary(path: Path = None              # Directory to analyze\n",
     "                    ) -> str:                       # Summary string\n",
     "    \"Get summary statistics for notebooks in directory tree\"\n",
-    "```\n"
+    "```\n",
+    "\n",
+    "#### Variables\n",
+    "\n",
+    "```python\n",
+    "ALIGNMENT_BUFFER = 1\n",
+    "```"
    ]
   },
   {
