Update total notebook count for directory tree visualization to exclude index.ipynb notebook.

--- a/nbs/02_tree.ipynb
+++ b/nbs/02_tree.ipynb
@@ -757,7 +757,7 @@
     "        path = cfg.nbs_path\n",
     "    \n",
     "    # Count notebooks\n",
-    "    total_notebooks = len(get_notebook_files(path, recursive=True))\n",
+    "    total_notebooks = len([nb for nb in get_notebook_files(path, recursive=True) if nb.name != 'index.ipynb'])\n",
     "    \n",
     "    # Count directories\n",
     "    subdirs = get_subdirectories(path, recursive=False)\n",
@@ -779,7 +779,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total: 8 notebooks\n"
+      "Total: 7 notebooks\n"
      ]
     }
    ],
@@ -787,14 +787,6 @@
     "# Test summary\n",
     "print(get_tree_summary())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "02d51e13-32fb-4802-ad80-98ab24808d42",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
