Update parser to support nbdev export directives with and without a space.

--- a/nbs/01_parsers.ipynb
+++ b/nbs/01_parsers.ipynb
@@ -504,8 +504,9 @@
     "    source = get_cell_source(cell)\n",
     "    source_lines = source.split('\\n')\n",
     "    \n",
-    "    # Check if cell is exported\n",
-    "    is_exported = '#| export' in source\n",
+    "    # Check if cell is exported - support all nbdev export directive formats\n",
+    "    # Supports: #| export, #|export, #| exporti, #|exporti, #| exports, #|exports\n",
+    "    is_exported = any(re.match(r'^\\s*#\\|\\s*export[is]?\\s*$', line) for line in source_lines)\n",
     "    \n",
     "    functions = []\n",
     "    classes = []\n",
