--- a/nbs/api_docs.ipynb
+++ b/nbs/api_docs.ipynb
@@ -1061,7 +1061,7 @@
      "text": [
       "Updated module overview with import statements:\n",
       "==================================================\n",
-      "### Core Utilities (`00_core.ipynb`)\n",
+      "### Core Utilities (`core.ipynb`)\n",
       "> Core utilities and data models for nbdev project overview generation\n",
       "\n",
       "#### Import\n",
@@ -1140,7 +1140,7 @@
     "nbdev.nbdev_export()\n",
     "\n",
     "# Test generating documentation for a single module\n",
-    "core_module = parse_notebook(Path(\"00_core.ipynb\"))\n",
+    "core_module = parse_notebook(Path(\"core.ipynb\"))\n",
     "print(\"Updated module overview with import statements:\")\n",
     "print(\"=\" * 50)\n",
     "print(generate_module_overview(core_module))"
@@ -1158,7 +1158,7 @@
      "text": [
       "Parsers module overview:\n",
       "==============================\n",
-      "### Notebook and Module Parsing (`01_parsers.ipynb`)\n",
+      "### Notebook and Module Parsing (`parsers.ipynb`)\n",
       "> Parse notebook metadata, content, and extract function/class signatures with docments\n",
       "\n",
       "#### Import\n",
@@ -1183,13 +1183,13 @@
       "```\n",
       "\n",
       "```python\n",
-      "def...\n"
+      "def pa...\n"
      ]
     }
    ],
    "source": [
     "# Test another module to see how the imports look\n",
-    "parsers_module = parse_notebook(Path(\"01_parsers.ipynb\"))\n",
+    "parsers_module = parse_notebook(Path(\"parsers.ipynb\"))\n",
     "print(\"Parsers module overview:\")\n",
     "print(\"=\" * 30)\n",
     "print(generate_module_overview(parsers_module)[:800] + \"...\" if len(generate_module_overview(parsers_module)) > 800 else generate_module_overview(parsers_module))"
