--- a/nbs/parsers.ipynb
+++ b/nbs/parsers.ipynb
@@ -722,7 +722,7 @@
    ],
    "source": [
     "# Test parsing the core module\n",
-    "core_info = parse_notebook(Path(\"00_core.ipynb\"))\n",
+    "core_info = parse_notebook(Path(\"core.ipynb\"))\n",
     "print(f\"Module: {core_info.name}\")\n",
     "print(f\"Title: {core_info.title}\")\n",
     "print(f\"Description: {core_info.description}\")\n",
