--- a/nbs/tree.ipynb
+++ b/nbs/tree.ipynb
@@ -305,7 +305,7 @@
    ],
    "source": [
     "# Test extracting notebook info\n",
-    "nb_info = extract_notebook_info(Path(\"00_core.ipynb\"))\n",
+    "nb_info = extract_notebook_info(Path(\"core.ipynb\"))\n",
     "print(f\"Title: {nb_info.title}\")\n",
     "print(f\"Description: {nb_info.description}\")\n",
     "print(f\"Export module: {nb_info.export_module}\")"
