Add pip install command to README.

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -13,6 +13,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Install\n",
+    "\n",
+    "```bash\n",
+    "pip install cjm-nbdev-overview\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## How to use\n",
     "\n",
     "### Automatic Module Documentation\n",
